# projects-ia

./: .gitignore  CLAUDE.md
course-daniel-codegpt/RA1/IL1.1/: 1-github_model_api.ipynb  2-langchain_model_api.ipynb  3-lanchain_streaming.ipynb  3-langchain_stream.ipynb  main.py  pyproject.toml
langraph/freecodecamp/: .env  Agent2.ipynb  Agent_bot.ipynb  Agent_bot.py  Chat_exercises.ipynb  Memory_agent.ipynb  React.ipynb  conditional_agent.ipynb  conditional_agent_excercise.ipynb  hello.ipynb  hello.py  loggint.txt  loopin_agent.ipynb  multiple_input.ipynb  pyproject.toml  sequential_agent.ipynb
langraph/langchain/module-1/: .env  agent-memory.ipynb  agent.ipynb  pyproject.toml
langraph/tutorial1/: .env  cycles.js  first_agent.js  hitl.js  html_common.js  index.js  index2.js  package-lock.json  package.json  stategraph.js  thil.js  thread.js  use_case.js  visualize.js
langraph/tutorial_agents/: .env  langgraph101.ipynb  main.py  pyproject.toml
python/python-ai-agent-tutorial/: Redme.md
python/python-ai-agent-tutorial/simple-agent/: main.py  pyproject.toml
spring-boot/adk-tutorial/: pom.xml
spring-boot/adk-tutorial/src/main/resources/: application.properties
spring-boot/spring-ia/: Readme.md  docker-compose.yaml  pom.xml
spring-boot/spring-ia/src/main/resources/: application.properties
spring-boot/tutorial-langchain4j/: chat-memory.db  pom.xml
spring-boot/tutorial-langchain4j/src/main/java/com/langchain4j/: ApiKeys.java  Assistant.java  AssistantUser.java  ChatDTO.java  (+5 more)
spring-boot/tutorial-langchain4j/src/main/resources/: application.properties
(+10 files in other folders)
