[project]
name = "module-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-tools>=0.2.8",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "mcp>=1.10.1",
    "python-dotenv>=1.1.1",
    "websockets>=15.0.1",
]
